# sql-agent

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  config.example.yaml  pyproject.toml  requirements.txt  setup.py  setup_verify.py
.github/workflows/: ci.yml
data/: schema.sql
examples/: demo_advanced.py  demo_basic.py
src/: __init__.py  agent.py  config.py  error_corrector.py  executor.py  llm.py  schema_introspection.py  tools.py
tests/: __init__.py  test_agent.py  test_corrector.py  test_executor.py
